--- a/views/folders/detail.ejs
+++ b/views/folders/detail.ejs
@@ -9,6 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Pretendard:wght@400;500;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/css/main.css" />
   <link rel="stylesheet" href="/css/folders.css" />
+  <link rel="stylesheet" href="/css/community.css" />
 </head>
 
 <body>
@@ -68,14 +69,14 @@
                           <p><%= post.writer && post.writer.nickname ? post.writer.nickname : post.writer && post.writer.name ? post.writer.name : '익명' %> · <%= typeof getRelativeTime !== 'undefined' ? getRelativeTime(post.createdAt) : new Date(post.createdAt).toLocaleDateString('ko-KR') %></p>
                         </div>
                         <div class="community-post-actions" onclick="event.stopPropagation();">
-                          <button type="button" class="like-btn-preview folder-like-btn" data-post-id="<%= post._id %>" data-is-liked="true">
+                          <button type="button" class="like-btn-preview folder-like-btn" data-post-id="<%= post._id %>" data-is-liked="true" aria-label="좋아요 수">
                             <svg width="20" height="19" viewBox="0 0 20 19" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path d="M10 18.35L8.55 17.03C3.4 12.36 0 9.28 0 5.5 0 2.42 2.42 0 5.5 0C7.24 0 8.91 0.81 10 2.09C11.09 0.81 12.76 0 14.5 0C17.58 0 20 2.42 20 5.5C20 9.28 16.6 12.36 11.45 17.04L10 18.35Z" fill="#1D5DFF" stroke="#1D5DFF" stroke-width="1.5" stroke-linejoin="round"/>
                             </svg>
                             <span class="post-likes-<%= post._id %>"><%= post.likes || 0 %></span>
                           </button>
-                          <div class="community-comment-count">
-                            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <div class="folder-comment-count">
+                            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path d="M12 4c4.418 0 8 2.91 8 6.5 0 1.3-.42 2.53-1.17 3.58l0.85 4.18-3.86-1.1C14.7 17.86 13.38 18 12 18c-4.418 0-8-2.91-8-6.5S7.582 4 12 4Z"
                                     stroke="#818181" stroke-width="2" stroke-linejoin="round" stroke-linecap="round" fill="none"/>
                             </svg>
@@ -103,7 +104,7 @@
                       <div class="folder-post-header">
                         <h2 class="folder-post-title"><%= post.title %></h2>
                         <div class="folder-post-actions" onclick="event.stopPropagation();">
-                          <button type="button" class="scrap-btn-preview folder-scrap-btn" data-post-id="<%= post._id %>" data-post-type="<%= post.postType %>" data-is-scrapped="true">
+                          <button type="button" class="scrap-btn-preview folder-scrap-btn" data-post-id="<%= post._id %>" data-post-type="<%= post.postType %>" data-is-scrapped="true" aria-label="스크랩 수">
                             <svg width="14" height="17" viewBox="0 0 16 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                               <path d="M13.7139 1C14.0837 1 14.3718 1.1174 14.6318 1.37012C14.891 1.62205 15.0004 1.88812 15 2.2207V18.5L8.38477 15.7432C8.13863 15.6406 7.86137 15.6406 7.61523 15.7432L1 18.5V2.22266C1 1.88855 1.10965 1.6221 1.36816 1.37109C1.59622 1.14975 1.84572 1.03206 2.15234 1.00586L2.28711 1H13.7139Z" stroke="#1D5DFF" stroke-width="2" stroke-linejoin="round" fill="#1D5DFF"/>
                             </svg>
@@ -192,5 +193,3 @@
 </body>
 
 </html>
-
-
